##
## $Id$
## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
## For further details see the nearest License.txt
##

add_subdirectory(Annotation)
add_subdirectory(DataFlow)
add_subdirectory(ControlFlow)
add_subdirectory(GUI)
add_subdirectory(Math)
add_subdirectory(Universe)
add_subdirectory(Grammar)
add_subdirectory(Structure)
